--- a/app/views/static_pages/humanity_dashboard.html.erb
+++ b/app/views/static_pages/humanity_dashboard.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, "Humanity Unite Dashboard" %>
 
 <h1 class='page-header'>
-  Humanity United Dashboard
+  Geospatial Dashboard
 </h1>
 
 <%= render partial: 'static_pages/humanity_dashboard_js.html.erb' %>
