--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -19,6 +19,7 @@
     .info h4 {margin: 0 0 5px;color: #777;}
     .legend {text-align: left;line-height: 18px;color: #555;}
     .legend i {width: 18px;height: 18px;float: left; margin-right: 8px;opacity: 0.7;}
+    .leaflet-disabled{background-color:lightgrey;}
 </style>
 <div id="vis">
     <div id="searchbar">
@@ -147,7 +148,20 @@
         layerControl.removeFrom(map);
         layerControl.options.collapsed = true;
         layerControl.addTo(map);
+        $('.leaflet-control-layers-base').prepend("<span style='float:right;cursor:pointer;' onClick='layerControl.pin()'><img src='/assets/humanity_united/pin.gif' alt='pin' style='height:12px;'/></span>")
     }
+    layerControl.pin = function(){
+        layerControl.removeFrom(map);
+        layerControl.options.collapsed = false;
+        layerControl.addTo(map);
+        $('.leaflet-control-layers-base').prepend("<span style='float:right;cursor:pointer;' onClick='layerControl.collapse()'><strong>X</strong></span>")
+    };
+function fullExtent(event){
+    event.preventDefault();
+    map.setZoom(3);
+    return false;
+}
+$('.leaflet-control-zoom').prepend("<a href='#' style='font-weight:bold;text-align:center;' onclick='fullExtent(event)'><span style='position:relative;top:3px;'>Full</span></a>");
     $('.leaflet-control-layers-base').prepend("<span style='float:right;cursor:pointer;' onClick='layerControl.collapse()'><strong>X</strong></span>")
     function getColorPoverty(d) {
         return d > 79.9  ? '#FF0202' :
