--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -106,7 +106,7 @@
                 noWrap:true,
                 opacity:0.7
             }),
-//./scripts/tilestache-server. -c dashboard.cfg
+//./scripts/tilestache-server.py -c dashboard.cfg
             acled = L.tileLayer('http://localhost:8080/acled/{z}/{x}/{y}.png', {
                 attribution: "Base layer data from <a href='http://www.acleddata.com/'>ACLED</a>",
                 noWrap:true,
