--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -96,6 +96,19 @@
 <%= javascript_tag "var feature_collection=#{@feature_collection.to_json}"%>
 <script>
 //Set-up layers
+    function getAdm(level,code){
+        var layer = L.tileLayer('http://localhost:8080/{shp}/{z}/{x}/{y}.png', {
+            shp: 'adm'+level+'_'+code,
+            noWrap:true,
+            opacity:0.7
+        });
+        if(level!==undefined && code!==undefined) {
+            return layer;
+        }
+        else{
+            return L.geojson();
+        }
+    }
     var MapQuest = L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpeg', {
                 attribution: 'Tiles by <a href="http://www.mapquest.com/">MapQuest</a> &mdash; Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
                 subdomains: '1234',
@@ -106,7 +119,7 @@
                 noWrap:true,
                 opacity:0.7
             }),
-//./scripts/tilestache-server.py -c dashboard.cfg
+//./scripts/tilestache-server.py -c adm.cfg
             acled = L.tileLayer('http://localhost:8080/acled/{z}/{x}/{y}.png', {
                 attribution: "Base layer data from <a href='http://www.acleddata.com/'>ACLED</a>",
                 noWrap:true,
@@ -195,6 +208,7 @@ function resetHighlight(e) {
     });
 }
 function highlightProject(e) {
+//Change style and count geocodes with same project
     geoJson.setStyle(MarkerOptions)
     var project = e.target.feature.properties.project_id,
         projectCount = 0;
@@ -208,6 +222,7 @@ function highlightProject(e) {
             };
         }
     });
+//Establish subset for bounds and adm gathering
     geoJsonSubset.clearLayers();
     geoJsonSubset.options.filter = function(feature,layer){
         return feature.properties.project_id==project
@@ -216,6 +231,17 @@ function highlightProject(e) {
     var bounds = geoJsonSubset.getBounds();
     zoomToFeature(bounds);
     $('div#hoverInfo').append("<br/><strong>Common geocodes: </strong>"+projectCount)
+    var highlightedAdms = [];
+    for(var layer in geoJsonSubset._layers){
+        var layer_level = geoJsonSubset._layers[layer].feature.properties.adm_level
+                layer_code = geoJsonSubset._layers[layer].feature.properties.adm_code,
+                adm_level = typeof(layer_level)=="number"?layer_level:undefined,
+                adm_code = typeof(layer_code)=="number"?layer_code:undefined;
+        highlightedAdms.push(getAdm(adm_level,adm_code))
+    }
+    var adms = L.featureGroup(highlightedAdms);
+    map.removeLayer(adms);
+    adms.addTo(map);
 };
 function zoomToFeature(bounds){
     if (bounds.getNorthEast().equals(bounds.getSouthWest())) {
@@ -237,13 +263,18 @@ if (feature_collection === null){
     console.log("Feature collection error.")
     feature_collection = {};
     feature_collection.features=[];}
-var geoJsonSubset = L.geoJson(),
-    geoJson = L.geoJson(feature_collection.features, {
+var geoJson = L.geoJson(feature_collection.features, {
     onEachFeature: onEachFeature,
     pointToLayer: function (feature, latlng) {
         return L.circleMarker(latlng, MarkerOptions);
     }
-});
+}),
+    geoJsonSubset = L.geoJson(feature_collection.features, {
+        onEachFeature: onEachFeature,
+        pointToLayer: function (feature, latlng) {
+            return L.circleMarker(latlng, MarkerOptions);
+        }
+    });
 map.addLayer(geoJson);
 //Filter function
 function filterGeoJson(filterObject){
