I don't know what I changed here, but I'm going to commit it.

--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -245,7 +245,7 @@ function highlightProject(e) {
     }
     if(typeof(adms)=="object"){map.removeLayer(adms)}
     adms = L.featureGroup(highlightedAdms);
-    if(highlightedAdms[0].options.shp=="adm1_147331") {
+    if(highlightedAdms[0].options.shp=="adm1_147331" || highlightedAdms[1].options.shp=="adm2_21883") {
         adms.addTo(map);
     }
     console.log(adms)
