Working search bar, but requires page refresh. Next step: asynchronous.

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -94,8 +94,6 @@
     </div>
 </div>
 <%= javascript_tag "var feature_collection=#{@feature_collection.to_json}"%>
-<%= javascript_tag "var search_results=#{@full_result_ids.to_json}"%>
-
 <script>
 //Set-up layers
     function getAdm(level,code){
@@ -123,7 +121,7 @@
                 noWrap:true,
                 opacity:0.7
             }),
-//sudo ./scripts/tilestache-server.py -c dashboard.cfg
+//sudo ./scripts/tilestache-server.py -c adm.cfg
 //sudo python ./scripts/tilestache-seed.py -c dashboard.cfg -b -42 -29 52 68 -l usgs 0 1 2 3 4 5 6 7 8 9 10 11 12 13
 //sudo python ./scripts/tilestache-seed.py -c dashboard.cfg -b -42 -29 52 68 -l acled 0 1 2 3 4 5 6 7 8 9 10 11 12 13
         acled = L.tileLayer('http://localhost:8080/acled/{z}/{x}/{y}.png', {
