--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -1,6 +1,8 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 <%= javascript_include_tag   "humanity_united/mapbox" %>
+<%= javascript_include_tag   "humanity_united/jquery-ui-1.10.4.custom.min" %>
 <%= stylesheet_link_tag "humanity_united/mapbox" %>
+<%= stylesheet_link_tag "humanity_united/ui-lightness/jquery-ui-1.10.4.custom.min" %>
 <style>
     .container {width:100% !important;padding:10px !important;}
     #vis { width:100%; height:630px; margin-right:auto; margin-left:auto;}
@@ -20,13 +22,27 @@
     .legend {text-align: left;line-height: 18px;color: #555;}
     .legend i {width: 18px;height: 18px;float: left; margin-right: 8px;opacity: 0.7;}
     .leaflet-disabled{background-color:lightgrey;}
+    .ui-widget{z-index:9999 !important;}
 </style>
 <div id="vis">
-    <div id="searchbar">
+    <div id="searchbar" class="ui-widget">
       <%= form_tag "/geospatial_dashboard", method: :get do %>
             <%= text_field_tag :search, params[:search], placeholder: 'Search for projects by keyword...', class:'vissearch' %>
       <% end %>
     </div>
+  <script>
+      $(document).ready(function(){
+          $( "#search" ).autocomplete({
+              source: get_keywords,
+              minLength: 1
+          });
+      });
+      function get_keywords(request, response){
+          var params = {keywords: request.term};
+          $.get("/queries/json_completion", params, function(data){
+              response(data); }, "json");
+      }
+  </script>
     <div id='map'>
     </div>
     <div id="left">
