No need to upload csv

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -96,7 +96,7 @@
       <div id="hoverInfo"></div>
     </div>
 </div>
-<%= javascript_tag "var feature_collection=#{@feature_collection.to_json}"%>
+<%= javascript_tag "var feature_collection=#{$feature_collection.to_json}"%>
 <script>
 //Set-up layers
     function getAdm(level,code){
