--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -49,7 +49,7 @@
           });
       });
       function get_keywords(request, response){
-          var params = {keywords: request.term};
+          var params = {keywords: request.term.split(/(?:\(.*?\))+/)[0]};
           $.get("/queries/json_completion", params, function(data){
               response(data); }, "json");
       }
