Zoom to search extent

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -41,6 +41,10 @@
               feature_collection = data
               geoJson.clearLayers()
               geoJson.addData(feature_collection.features)
+              if(feature_collection.features.length>0){
+                  var bounds = geoJson.getBounds()
+                  zoomToFeature(bounds)
+              }
               })
       $(document).ready(function(){
           $( "#search" ).autocomplete({
