--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -45,6 +45,7 @@
                   var bounds = geoJson.getBounds()
                   zoomToFeature(bounds)
               }
+                  else{map.setZoom(3)}
               })
       $(document).ready(function(){
           $( "#search" ).autocomplete({
