Bigger bounds to stop the wobble

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -151,7 +151,7 @@
             }),
 //Set-up map
             map = L.map('map', {
-                maxBounds: [[51.17934297928927,67.1484375],[-41.50857729743933,-28.125]],
+                maxBounds: [[52,68],[-42,-29]],
                 center: [6.964039, 19.533678],
                 zoom:3,
                 minZoom:3,
