--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,9 @@
     <%= render 'layouts/templates' %>
 </head>
 <body >
-
+<% if yield(:title)!="Geospatial Dashboard"%>
     <%= render 'layouts/header' %>
+<% end %>
 
     <div class="container main">
 
@@ -37,8 +38,9 @@
     <% end %> 
 
       <%= yield %>
-     
+     <% if yield(:title)!="Geospatial Dashboard"%>
       <%= render 'layouts/footer' %>
+     <% end %>
 
       <%= debug(params) if Rails.env.development? %>
     </div>
